# llm-project

./: bot_00.py  bot_01.py  bot_02.py  bot_03.py  bot_04.py  bot_05.py  bot_06.py  bot_07.py  main.py  pinecone-browser.py  pinecone-uploader-v2.py  pinecone-uploader.py  pyproject.toml  rag_api.py  requirements.txt  temperature.py
agents/: agent_00.py  agent_01.py
